[gd_scene load_steps=11 format=3 uid="uid://d3mfivdm3eyn8"]

[ext_resource type="PackedScene" uid="uid://b4emkjkqtm01n" path="res://Resources/Models/Weapons/Knife/Knife.glb" id="1_nbq0b"]
[ext_resource type="Script" path="res://Script/Weapon/knife_weapon.gd" id="1_ohnq5"]
[ext_resource type="AudioStream" uid="uid://c80tgtsqebjwe" path="res://Resources/Audio/Peds/slash.wav" id="3_iub3q"]
[ext_resource type="AudioStream" uid="uid://cqm4onlk75xer" path="res://Resources/Audio/Peds/backstab.wav" id="4_xx50n"]

[sub_resource type="Animation" id="Animation_80xl4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Knife:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.499352, -0.594708, 0.420877)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Knife:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.214179, 1.80089, 0.0268238)]
}

[sub_resource type="Animation" id="Animation_jo6ji"]
resource_name = "prep"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Knife:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.499352, -0.594708, 0.420877), Vector3(0.499352, 0.728992, 0.420877)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Knife:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.214179, 1.80089, 0.0268238), Vector3(0.57112, -1.8389, 2.97124)]
}

[sub_resource type="Animation" id="Animation_188w1"]
resource_name = "slash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Knife:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.499352, -0.594708, 0.420877), Vector3(0.499, -0.595, -1.38991), Vector3(1.27702, -0.329583, 0.287086), Vector3(1.27702, -0.329583, 1.42546), Vector3(0.499352, -0.594708, 0.420877)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Knife:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.266667, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.214179, 1.80089, 0.0268238), Vector3(0.289733, 1.45053, -1.2073), Vector3(0.0654803, 0.490077, -1.33168), Vector3(0.369623, 0.169796, -1.56835), Vector3(0.214179, 1.80089, 0.0268238)]
}

[sub_resource type="Animation" id="Animation_i37yv"]
resource_name = "stab"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Knife:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.499352, 0.728992, 0.420877), Vector3(1.11104, -0.0331461, 0.420877), Vector3(0.499352, -0.594708, 0.420877)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Knife:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.57112, -1.8389, 2.97124), Vector3(0.57112, -1.8389, 2.97124), Vector3(0.214179, 1.80089, 0.0268238)]
}

[sub_resource type="Animation" id="Animation_rks2g"]
resource_name = "unprep"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Knife:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.499352, 0.728992, 0.420877), Vector3(0.499352, -0.594708, 0.420877)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Knife:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.57112, -1.8389, 2.97124), Vector3(0.214179, 1.80089, 0.0268238)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kkcgk"]
_data = {
"RESET": SubResource("Animation_80xl4"),
"prep": SubResource("Animation_jo6ji"),
"slash": SubResource("Animation_188w1"),
"stab": SubResource("Animation_i37yv"),
"unprep": SubResource("Animation_rks2g")
}

[node name="Knife" type="Node3D"]
script = ExtResource("1_ohnq5")

[node name="Knife" parent="." instance=ExtResource("1_nbq0b")]
transform = Transform3D(-0.513037, 0.165075, 0.702368, 0.0604468, 0.757071, -0.156911, -2.24785, -0.0173176, -0.164524, 0.499352, -0.594708, 0.420877)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kkcgk")
}

[node name="HitDetectionRay" type="RayCast3D" parent="."]
target_position = Vector3(2.5, 0, 0)
collision_mask = 3

[node name="SlashNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_iub3q")

[node name="StabNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_xx50n")
